overflow fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -36,6 +36,7 @@ body {
 
 .panel-body {
   padding: 0;
+  height: 1px; /* This fixed the text overflowing down the page */
   flex-grow: 1;
 }
 
